Cleaned up logic in detonation initialization, added parameter to control detonation height.

--- a/Config
+++ b/Config
@@ -89,6 +89,7 @@ PARAMETER sim_critDens     REAL 0.0E0
 PARAMETER sim_critKine     REAL 0.0E0
 PARAMETER sim_dbleDetTemp  REAL 0.0E0
 PARAMETER sim_explodeCore  BOOLEAN false
+PARAMETER sim_detHeight    INTEGER 1
 
 PARAMETER larget           REAL 1.0E10
 
