Moved extra EOS mode flags to Config file to avoid conflicts when FLASH is updated.

--- a/Config
+++ b/Config
@@ -6,6 +6,8 @@ DATAFILES *.dat
 
 PPDEFINE HIDE_SANITIZE
 #PPDEFINE DEBUG_EOS
+PPDEFINE MODE_PRES_TEMP 108
+PPDEFINE MODE_PRES_ENTR 109
 
 REQUIRES Driver
 REQUIRES Grid
@@ -93,8 +95,6 @@ PARAMETER sim_dbleDetTemp  REAL 0.0E0
 PARAMETER sim_explodeCore  BOOLEAN false
 PARAMETER sim_detHeight    INTEGER 1
 PARAMETER sim_hydroDtMult  REAL 1.0E-2
-
-PARAMETER larget           REAL 1.0E10
 
 PARAMETER plot_var_13 STRING "none"
 PARAMETER plot_var_14 STRING "none"
